# ArenAI

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  build.gradle  gradle.properties  install_dependencies.ps1
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
arenai/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_linux.sh  build_windows.ps1  install_dependencies.ps1
arenai/.claude/: settings.json
arenai/.claude/scripts/: run_pre_commit.sh
arenai/arenai_controller/: CMakeLists.txt
arenai/arenai_controller/src/: dummy.cpp
arenai/arenai_core/: CMakeLists.txt
arenai/arenai_core/src/: action_stats.cpp  enemy_handler.cpp  enemy_tank_factory.cpp  environment.cpp  player_tank_factory.cpp  thread_limiter.cpp  thread_pool.cpp
arenai/arenai_core/tests/: CMakeLists.txt
arenai/arenai_desktop/: .gitignore  CMakeLists.txt  build_windows.ps1  install_dependencies.ps1
arenai/arenai_desktop/src/: game.cpp  game.h  main.cpp
arenai/arenai_model/: CMakeLists.txt
arenai/arenai_model/src/: action_stats.cpp  bullet_engine.cpp  bullet_engine.h  bullet_item.cpp  bullet_item.h  engine.cpp  item.cpp  shapes.cpp
arenai/arenai_model/tests/: CMakeLists.txt
arenai/arenai_train/: .gitignore  CMakeLists.txt  Dockerfile  README.md
arenai/arenai_train/python/: .pre-commit-config.yaml  export_model_to_pte.py  loader.py  model.py  pyproject.toml  requirements.txt  setup.py
arenai/arenai_train/src/: main.cpp  replay_buffer.cpp  timer.h  train.cpp  train.h
arenai/arenai_train/tests/: CMakeLists.txt
arenai/arenai_utils/: CMakeLists.txt
arenai/arenai_utils/src/: file_reader.cpp  string_utils.cpp
arenai/arenai_view/: CMakeLists.txt
arenai/arenai_view/shaders/: ao_blur_fs.glsl  bloom_blur_fs.glsl  bloom_bright_fs.glsl  cube_fs.glsl  cube_vs.glsl  diffuse_shadow_fs.glsl  diffuse_shadow_vs.glsl  god_rays_fs.glsl  normal_map_fs.glsl  post_fs.glsl  post_vs.glsl  ssao_fs.glsl
arenai/arenai_view/src/: camera.cpp  errors.cpp  pbuffer_renderer.cpp  program.cpp  renderer.cpp  shader.cpp  shader.h
arenai/arenai_view/tests/: CMakeLists.txt
arenai/cmake/: ArenaiEmbedShaders.cmake  ArenaiRuntimeDlls.cmake
arenai/scripts/: goldens_docker.sh
arenai/scripts/ci/: install_ubuntu_deps.sh  render_env.sh
arenai_core/: CMakeLists.txt
arenai_core/include/arenai_core/: constants.h  thread_pool.h
arenai_core/src/: enemy_handler.cpp
arenai_core/tests/: CMakeLists.txt
arenai_core/tests/src/: tests_environment.cpp  tests_model_matrices_double_buffer.cpp
arenai_desktop/: CMakeLists.txt  README.md
arenai_desktop/src/: game.cpp  game.h  main.cpp
arenai_desktop/src/controller/: control_kind.h  game_input_router.cpp  game_input_router.h  gamepad.h  mouse_keyboard.cpp
arenai_desktop/src/core/: agent_loading_checker.cpp  agent_loading_checker.h  game_environment.cpp  game_environment.h  user_preferences.cpp  user_preferences.h
arenai_desktop/src/gui/: menu.h  rml_menu.cpp
arenai_model/tests/: CMakeLists.txt
arenai_train/: CMakeLists.txt
arenai_train/include/arenai_train/: agent.h  factory.h  file_reader.h  replay_buffer.h  torch_converter.h
arenai_train/python/: requirements.txt
arenai_train/python/arenai_executorch_conversion/: constants.py
arenai_train/python/arenai_visualize_metrics/: __main__.py
arenai_train/src/: main.cpp  train.cpp
arenai_train/src/agents/: empty_step_collector.cpp  empty_step_collector.h  factory.cpp  factory_set.cpp  sac.cpp  step_collector.h  torch_agent.h  torch_factory.h  torch_types.h  trainer.cpp  trainer.h
arenai_train/src/core/: train_environment.cpp  train_environment.h
arenai_train/src/distributions/: beta_law.h  distribution.h  gaussian_tanh.cpp
arenai_train/src/metrics/: last_metric.h  mean_metric.h  metric.cpp  metric_saver.h  std_metric.cpp  std_metric.h
arenai_train/src/networks/: actor.cpp  actor.h  entropy.cpp  q_function.cpp  q_function.h  vision.cpp  vision.h
arenai_train/src/networks_io/: torch_loader.h  torch_saver.cpp  torch_saver.h
arenai_train/src/networks_utils/: init.h  target_update.h  torch_converter.cpp  torch_converter.h
arenai_train/src/replay_buffer/: replay_buffer.cpp  reward_replay_buffer.h
arenai_train/src/reward_transforms/: ema_transform.cpp  reward_transform.h  running_norm_transform.cpp
arenai_train/src/utils/: file_reader.cpp  image_write.cpp  image_writer.h
arenai_train/tests/: CMakeLists.txt
arenai_utils/: CMakeLists.txt
arenai_utils/include/arenai_utils/: double_buffer.h  exceptions.h  locked_buffer.h  string_utils.h
arenai_utils/src/: exceptions.cpp  string_utils.cpp
arenai_view/: CMakeLists.txt
arenai_view/include/arenai_view/: backend.h  camera.h  renderer.h  window.h
arenai_view/shaders/: ao_blur_fs.glsl  bloom_blur_fs.glsl  bloom_bright_fs.glsl  cube_fs.glsl  cube_vs.glsl  diffuse_fs.glsl  diffuse_shadow_fs.glsl  diffuse_shadow_vs.glsl  diffuse_vs.glsl  god_rays_fs.glsl  normal_map_fs.glsl  normal_map_vs.glsl  post_fs.glsl  post_vs.glsl  rml_fs.glsl  rml_vs.glsl  shadow_depth_fs.glsl  shadow_depth_vs.glsl  simple_fs.glsl  simple_vs.glsl  ssao_fs.glsl
arenai_view/src/glfw/: glfw_opengl_backend.cpp  glfw_opengl_backend.h  glfw_vulkan_backend.cpp  glfw_vulkan_backend.h  glfw_vulkan_window.cpp  glfw_vulkan_window.h  glfw_window.cpp  glfw_window.h
arenai_view/src/opengl/: egl_render_context.cpp  egl_render_context.h  errors.cpp  errors.h  gl.h  gl_window.h  opengl_backend.cpp  opengl_backend.h  program.h  rml_render_interface.cpp  rml_render_interface.h  shader.cpp  shader.h  shadow_map.h
arenai_view/src/vulkan/: buffer.h  descriptors.h  device.cpp  device.h  errors.cpp  errors.h  pipeline.h  render_context.cpp  render_context.h  render_target.h  rml_render_interface.cpp  rml_render_interface.h  shadow_map.cpp  (+13 more)
arenai_view/tests/: CMakeLists.txt
host/: .gitignore  CMakeLists.txt  README.md  requirements.txt
host/python/: export_model_to_pte.py  loader.py  model.py
host/src/: agent.h  main.cpp  train.cpp  train.h  train_environment.cpp  train_environment.h  train_gl_context.cpp
(+1411 files in other folders)
